correct invisible character in light mode

--- a/src/_includes/components/pi-apps-theme.css
+++ b/src/_includes/components/pi-apps-theme.css
@@ -121,6 +121,10 @@ pre>code.highlight {
 }
 
 @media (prefers-color-scheme: light) {
+  .token.punctuation {
+    color: #CF222E;
+  }
+  
   .token.operator,
   .token.boolean,
   .token.number {
